[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Main/gameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/gameOver/spilled-sauce.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Main/gameOver/soy-sauce-cap.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Main/GamjaFlower-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Main/gameOver/menu-button.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Main/gameOver/menu-button-pressed.png" type="Texture" id=6]
[ext_resource path="res://sound/menu-button.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Main/gameOver/play-again-button.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Main/gameOver/play-again-button-pressed.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Main/new-high-score.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="Node2D"]

z_index = 4
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform", "Z Index" ]
__meta__ = {
"_edit_vertical_guides_": [ 400.0, 380.0 ]
}

[node name="spilled-sauce" type="Sprite" parent="." index="0"]

position = Vector2( 380, 240 )
scale = Vector2( 0.0999629, 0.0999629 )
texture = ExtResource( 2 )

[node name="soy-sauce-cap" type="Sprite" parent="." index="1"]

position = Vector2( 400, 450 )
scale = Vector2( 0.096, 0.096 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 266.0
margin_right = 480.0
margin_bottom = 307.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "SCORE: "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="MenuButton" type="TextureButton" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 310.0
margin_top = 330.0
margin_right = 502.0
margin_bottom = 492.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="MenuTouchScreenButton" type="TouchScreenButton" parent="MenuButton" index="0"]

normal = ExtResource( 5 )
pressed = ExtResource( 6 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform" ]

[node name="MenuButtonAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PlayAgainAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PlayAgainButton" type="TextureButton" parent="." index="6"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 380.0
margin_top = 320.0
margin_right = 794.0
margin_bottom = 567.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="PlayAgainTouchScreenButton" type="TouchScreenButton" parent="PlayAgainButton" index="0"]

normal = ExtResource( 8 )
pressed = ExtResource( 9 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="NewHighScore" type="Sprite" parent="." index="7"]

position = Vector2( 390, 235 )
scale = Vector2( 0.196283, 0.196283 )
texture = ExtResource( 10 )

[node name="LoadMainSceneTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="LoadMenuSceneTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[connection signal="button_up" from="MenuButton" to="." method="_on_MenuButton_button_up"]

[connection signal="button_up" from="PlayAgainButton" to="." method="_on_PlayAgainButton_button_up"]

[connection signal="timeout" from="LoadMainSceneTimer" to="." method="_on_LoadMainSceneTimer_timeout"]

[connection signal="timeout" from="LoadMenuSceneTimer" to="." method="_on_LoadMenuSceneTimer_timeout"]


